fix: 🐛 color of save button on mobile devices

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.less
@@ -344,7 +344,7 @@
 					display: block;
 					width: 2px;
 					height: 11px;
-					background: var( --color-base--subtle );
+					background: var( --background-color-overlay );
 					content: '';
 				}
 
